[tool.poetry]
name = "mltools"
version = "0.1.0"
description = "Machine Learning functions aiming to help in the Machine Learning course at ICAI"
authors = ["Jaime Pizarroso"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
